implementa conceptos de clase, metodos. implementa concepto de herencia

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /tcJava/holis/nbproject/private/
 /tcJava/holis/build/
+/tcJava/Poo/nbproject/private/
+/tcJava/Poo/build/
+/tcJava/Herencia/nbproject/private/
