realiza ejercicio integrador de los temas vistos

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ build/
 .settings/
 /tcJava/ClaAbstractas/nbproject/private/
 /tcJava/Interfaces/nbproject/private/
+/tcJava/Poke/nbproject/private/
