implementa conceptos de sobrecarga y sobrescritura de metodos

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ build/
 /tcJava/ClaAbstractas/nbproject/private/
 /tcJava/Interfaces/nbproject/private/
 /tcJava/Poke/nbproject/private/
+/tcJava/SobrescrituraYSobrecarga/nbproject/private/
