implementa concepto de arrayList

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@ build/
 /tcJava/Interfaces/nbproject/private/
 /tcJava/Poke/nbproject/private/
 /tcJava/SobrescrituraYSobrecarga/nbproject/private/
+/tcJava/ArrayLists/nbproject/private/
