implementa concepto de LinkedList

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ build/
 /tcJava/Poke/nbproject/private/
 /tcJava/SobrescrituraYSobrecarga/nbproject/private/
 /tcJava/ArrayLists/nbproject/private/
+/tcJava/LinkedLists/nbproject/private/
