implementa concepto de stack (pilas)

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ build/
 /tcJava/ArrayLists/nbproject/private/
 /tcJava/LinkedLists/nbproject/private/
 /tcJava/ArrayVLinkedList/nbproject/private/
+/tcJava/Pilas/nbproject/private/
