implementa concepto hashMap

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ build/
 /tcJava/LinkedLists/nbproject/private/
 /tcJava/ArrayVLinkedList/nbproject/private/
 /tcJava/Pilas/nbproject/private/
+/tcJava/PruebaHashMap/nbproject/private/
