implementa concepto de excepciones

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,4 @@ build/
 /tcJava/ArrayVLinkedList/nbproject/private/
 /tcJava/Pilas/nbproject/private/
 /tcJava/PruebaHashMap/nbproject/private/
+/tcJava/Excepciones/nbproject/private/
