implementa el concepto enum

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ build/
 /tcJava/Pilas/nbproject/private/
 /tcJava/PruebaHashMap/nbproject/private/
 /tcJava/Excepciones/nbproject/private/
+/tcJava/Enum/nbproject/private/
