agrega ejercicio integrador II

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ build/
 /tcJava/PruebaHashMap/nbproject/private/
 /tcJava/Excepciones/nbproject/private/
 /tcJava/Enum/nbproject/private/
+/tcJava/EjercicioIntegradorII/nbproject/private/
